@@ -1,8 +1,10 @@
-﻿using System.Collections.Generic;
+﻿using System;
+using System.Collections.Generic;
 using System.IO;
 using System.Linq;
 using System.Text.RegularExpressions;
 using Nustache.Core;
+using PatternLab.Core.Providers;
 
 namespace PatternLab.Core.Mustache
 {
@@ -32,9 +34,29 @@ namespace PatternLab.Core.Mustache
             var template = reader.ReadToEnd();
 
             // Replace any Mustache variables with the values in the Pattern Parameters
-            template = _parameters.Aggregate(template,
-                (current, parameter) =>
-                    Regex.Replace(current, @"{{\s?" + parameter.Key + @"\s?}}", parameter.Value.ToString()));
+            foreach (var parameter in _parameters)
+            {
+                var value = parameter.Value.ToString();
+                var key = parameter.Key;
+
+                if (value.Equals(bool.TrueString, StringComparison.InvariantCultureIgnoreCase))
+                {
+                    // If 'true' strip out {{# }} sections and set {{^ }} sections to empty
+                    template = Regex.Replace(template, @"{{#\s?" + key + @"\s?}}(.*?)?{{/\s?" + key + @"\s?}}", @"$1", RegexOptions.Singleline);
+                    template = Regex.Replace(template, @"{{\^\s?" + key + @"\s?}}(.*?)?{{/\s?" + key + @"\s?}}", string.Empty, RegexOptions.Singleline);
+                }
+                else if (value.Equals(bool.FalseString, StringComparison.InvariantCultureIgnoreCase))
+                {
+                    // If 'true' strip out {{^ }} sections and set {{# }} sections to empty
+                    template = Regex.Replace(template, @"{{\^\s?" + key + @"\s?}}(.*?)?{{/\s?" + key + @"\s?}}", @"$1", RegexOptions.Singleline);
+                    template = Regex.Replace(template, @"{{#\s?" + key + @"\s?}}(.*?)?{{/\s?" + key + @"\s?}}", string.Empty, RegexOptions.Singleline);
+                }
+                else
+                {
+                    // Replace variables with value
+                    template = Regex.Replace(template, @"{{\s?" + key + @"\s?}}", value.Replace(PatternProvider.IdentifierParameterString.ToString(), string.Empty));
+                }
+            }
 
             // Scan and parse the template with the Pattern Lab specific instance of Nustache classes
             var scanner = new MustacheScanner();
